# 12e-Trading

./: .clang-format  .editorconfig  .gitignore  .prettierignore  README.md  dev.bat  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
docs/: architecture.md
docs/adr/: 0001-separate-daemon-and-shared-memory.md
native/: CMakeLists.txt  README.md
native/common/include/: ShmLayout.h  ShmRegion.h  ShmRingBuffer.h  Tick.h
native/common/src/: ShmRegion.cpp
native/daemon/: CMakeLists.txt
native/daemon/include/: Config.h  EventChannel.h  Logger.h  MarketDataService.h  MockFeed.h  NewsService.h  SymbolRegistry.h  YahooFeed.h  YahooHistory.h
native/daemon/src/: Config.cpp  EventChannel.cpp  Logger.cpp  MarketDataService.cpp  MockFeed.cpp  NewsService.cpp  SymbolRegistry.cpp  YahooFeed.cpp  YahooHistory.cpp  main.cpp
native/reader/: CMakeLists.txt
native/reader/include/: ShmReader.h
native/reader/src/: ShmReader.cpp  binding.cc
native/tools/shm-smoke/: CMakeLists.txt  main.cpp
native/tools/yahoo-chart-smoke/: CMakeLists.txt  main.cpp
native/tools/yahoo-crumb-smoke/: CMakeLists.txt  main.cpp
native/tools/yahoo-quote-smoke/: CMakeLists.txt  main.cpp
native/yahoo/: CMakeLists.txt
native/yahoo/include/: HttpClient.h  YahooAuth.h  YahooClient.h
native/yahoo/src/: HttpClient.cpp  YahooAuth.cpp  YahooClient.cpp
resources/: README.md
scripts/: build-native.mjs  clean.mjs  run-smoke.mjs  run-yahoo-chart-smoke.mjs  run-yahoo-crumb-smoke.mjs  run-yahoo-quote-smoke.mjs  test-event-channel.mjs
src/main/: daemon_supervisor.ts  event_bridge.ts  finbert.ts  index.ts  ipc_handlers.ts  logger.ts  paths.ts  symbol_registry.ts  tick_bridge.ts
src/main/live_feed/: feed_status.ts  yahoo_client.ts  yahoo_history.ts  yahoo_instance.ts  yahoo_summary.ts
src/preload/: index.ts
src/renderer/: index.html  vite-env.d.ts
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/components/: FeedStatusBadge.tsx  MainWindow.tsx  NewsTab.tsx  PriceRow.tsx  Sparkline.tsx  StatusBar.tsx  SymbolDetailModal.tsx  SymbolList.tsx
src/renderer/src/hooks/: use_tick_stream.ts
src/renderer/src/store/: news.ts  prices.ts
src/renderer/src/styles/: globals.css
src/renderer/src/types/: tick.ts
